2010-06-02  smeghead <smeghead@users.sourceforge.jp>

	* 一覧に表示する時刻の分の桁が表示されない問題を修正した。sqlite3のsubstr
	関数の使い方の問題。

2010-05-30  smeghead <smeghead@users.sourceforge.jp>

	* Seleniumのテストに問題があったのを修正した。既に存在しているサブプロジェ
	クトに依存していたため、依存を削除した。

2010-05-29  smeghead <smeghead@users.sourceforge.jp>

	* 1.3.13リリース

2010-05-29  smeghead <smeghead@users.sourceforge.jp>

	* hook機能で利用する一時ファイルを作成するディクレトリをtmpディレクトリに
	変更した。
	* hook機能で外部プログラムに渡すjsonのなかのURLのプロジェクトIDがurlencode
	されたものになっていなかったのを修正した。

2010-05-25  smeghead <smeghead@users.sourceforge.jp>

	* 登録された添付ファイルを一括で抜き出すスクリプトを作成した。

2010-05-24  smeghead <smeghead@users.sourceforge.jp>

	* メール送信用スクリプト実行のhook機能への情報の渡し方を、環境変数経由から
	、一時ファイル経由に変更した。一時ファイルを作成するディレクトリは検討の余
	地あり。

2010-05-18  smeghead <smeghead@users.sourceforge.jp>

	* Windows版でのhook実行時にエラーが発生する問題を修正。scriptのパスを生成
	する際に、/固定だったため、Windowsでは、エラーになっていた。

2010-05-10  smeghead <smeghead@users.sourceforge.jp>

	* 中国語のリソースファイルの修正。newcuteさんによるパッチとりこみ。
	thank you.

2010-04-17	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.12リリース

2010-04-17  smeghead <smeghead@users.sourceforge.jp>

	* Makefileのwebappターゲットのバグ修正。
	書き込み権限を付加する部分が機能していなかったのを修正した。
	* テンプレート「TODO」で項目を追加するとエラーが出るのを修正した。
	* INSTALLファイルのインストール方法をstatic版のインストー
	ル方法に変更した。にstatic版のインストール方法に変更した。
	* debug.logに対する書き込み権限が無い場合は、エラーにならずに、ログが出力
	されないようになるようにした。

2010-04-08	smeghead  <smeghead@users.sourceforge.jp>

	* 1.3.11リリース

2010-04-08  smeghead <smeghead@users.sourceforge.jp>

	* スタイルシートの調整

2010-04-06  smeghead <smeghead@users.sourceforge.jp>

	* 64bitコンパイル時にsqlite3のsqlite3_prepare呼び出しで落ちる問題があった
	ため、64bit環境でも32bitでコンパイルするように修正した。
	* Seleniumlテストを修正した。

2010-04-04  smeghead <smeghead@users.sourceforge.jp>

	* デザインを修正した。

2010-03-28  smeghead <smeghead@users.sourceforge.jp>

	* 「状態」を変更しないで返信を行なう場合のjavascriptのアラートメッセージが
	   わかりにくかったのを修正した。

2010-03-22  smeghead <smeghead@users.sourceforge.jp>

	* makeファイル中で、INITIAL_LOCALEを自動判定するように変更した。
	* デフォルトBTSに削除というステータスを追加した。

2010-03-21  smeghead <smeghead@users.sourceforge.jp>
