@@ -1,5 +1,5 @@
 Starbug1 - A Bug Tracking System written in C.
-Copyright (C) 2007,2008,2009  smeghead
+Copyright (C) 2007,2008,2009,2010  smeghead
 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
